2006-11-14  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* src/foreign-graphml.c (igraph_graphml_destroy_state) :
	fixed memory leaks

2006-11-09  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/clustertool.cpp (igraph_spinglass_my_community) : 
	return more data: adhesion, cohesion, inner & outer links
	* src/pottsmodel_2.cpp (PottsModel::FindCommunityFromStart) :
	return more data: adhesion, cohesion, inner & outer links

	* src/clustertool.cpp (igraph_spinglass_community) :
	allow interruption
	* src/pottsmodel_2.cpp (PottModel::FindCommunityFromStart) :
	allow interruption

	* src/clustertoop.cpp (igraph_spinglass_my_community) : 
	better error handling
 	
2006-11-07  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/clustertool.cpp (igraph_spinglass_my_community) : removed 
	unneccesary arguments

2006-11-06  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/NetDataTypes.cpp : added
	* src/NetRoutines.cpp : added
	* src/pottsmodel_2.cpp : added
	* src/clustertool.cpp : added
	* examples/simple/spinglass.c : added

	* src/clustertool.cpp (igraph_spinglass_community) : cleanup
	(igraph_spinglass_my_community) : added
	* src/pottsmodel_2.cpp (PottsModel::assign_initital_conf)
	(PottsModel::HeatBathLoopupZeroTemp)
	(PottsModel::HeatBathParallelLookup)
	(PottsModel::HeatBathLookup) : update random number generation
	(PottsModel::FindCommunityFromStart) : update to return result
	(PottsModel::WriteClusters) : myq argument not needed
	* examples/simple/spinglass.c : updated
	
2006-11-04  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/flow.c (igraph_i_vertex_connectivity_directed) : corrected

	* src/flow.c (igraph_vertex_disjoint_paths) : make it work for
	adjacent vertices
	
2006-11-03  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* interfaces/python, configure.in : modified to use Python's
	distutils build mechanism instead.
	* interfaces/python/package/__init__.py : the Python package is
	now divided into two submodule: igraph._igraph is the interface